<resources>
    <string name="app_name">Authentication_Server_HW17</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="email">Email:</string>
    <string name="authentication_app">Authentication App</string>
    <string name="remember_me">Remember me</string>
</resources>